--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+html, body, #root {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .App {
-  text-align: center;
+  height: 100vh;
+  background-color: #f5f5f9;
+  overflow: hidden;
 }
 
 .App-logo {
